<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroProfessor">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/addP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/EditP"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/EditEm"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditP" />

    <Button
        android:id="@+id/btnCP"
        android:layout_width="227dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:text="@string/Salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditEm"
        android:textSize="18dp"
        android:backgroundTint="@color/Vermelho"/>

</androidx.constraintlayout.widget.ConstraintLayout>