<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="500dp"
        android:layout_height="900dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        app:srcCompat="@drawable/fundo" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="322dp"
        android:layout_height="41dp"
        android:layout_marginTop="344dp"
        android:text="@string/Login"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextE"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextS"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextE" />

    <Button
        android:id="@+id/btnAcessar"
        android:layout_width="227dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/Vermelho"
        android:text="@string/Acessar"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextS" />
</androidx.constraintlayout.widget.ConstraintLayout>